# CppND-Garbage-Collector

./: .gitignore  CMakeLists.txt  README.md
src/: gc_details.h  gc_details.hpp  gc_iterator.h  gc_iterator.hpp  gc_pointer.h  gc_pointer.hpp  main.cpp
tests/: CMakeLists.txt
